--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css" integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Web Studio</title>
 </head>
-<body>
+<body class="container">
     <!-- Wrapper -->
     <header>
         <nav>
-            <!-- <div> -->
-                <a href="./index.html">WebStudio</a>
-            <!-- </div> -->
-   
-            <!-- <div> -->
-                <ul>
-                    <li><a href="" target="_blank">Studio</a></li>
-                    <li><a href="" target="_blank">Portfolio</a></li>
-                    <li><a href="" target="_blank">Contacts</a></li>   
-                </ul>
-            <!-- </div> -->
+            <a class="logo" href="./index.html"><span class="logo-half1">Web</span>Studio</a>
+            <ul>
+                <li><a class="nav-menu" href="./index.html" target="_blank">Studio</a></li>
+                <li><a class="nav-menu" href="./index.html" target="_blank">Portfolio</a></li>
+                <li><a class="nav-menu" href="./index.html" target="_blank">Contacts</a></li>   
+            </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li> 
+                <li><a class="nav-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="nav-address" href="tel:+110001111111">+11 (000) 111-11-11</a></li> 
             </ul>   
         </address>
     </header>
@@ -35,7 +35,7 @@
                 <h1>Effective Solutions for Your Business</h1>
             <!-- </div> -->
             <!-- <div> -->
-                <button type="button">Order Service</button>
+                <button class="button" type="button">Order Service</button>
             <!-- </div> -->
         </section>
         <section>
@@ -61,7 +61,7 @@
                 </ul>
             <!-- </div> -->
         </section>
-        <section>
+        <section class="section3">
             <!-- <div> -->
                 <h2>Our Team</h2>
             <!-- </div> -->
@@ -88,11 +88,46 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/pf1.jpg" alt="Banking App" width="360">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/pf2.jpg" alt="Cashless Payment" width="360">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/pf3.jpg" alt="Meditation App" width="360">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/pf4.jpg" alt="Taxi Service" width="360">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/pf5.jpg" alt="Screen Illustrations" width="360">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/pf6.jpg" alt="Online Courses" width="360">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <!-- <div> -->
-            <a href="./index.html">WebStudio</a>
+            <a class="logo-footer" href="./index.html"><span class="logo-half1">Web</span>Studio</a>
         <!-- </div> -->
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
