--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- Wrapper -->
     <header>
         <nav>
-            <a class="logo" href="./index.html"><span class="logo-half1">Web</span>Studio</a>
+            <a class="logo" href="./index.html">Web<span class="logo-half2">Studio</span></a>
             <ul>
                 <li><a class="nav-menu" href="./index.html" target="_blank">Studio</a></li>
-                <li><a class="nav-menu" href="./index.html" target="_blank">Portfolio</a></li>
-                <li><a class="nav-menu" href="./index.html" target="_blank">Contacts</a></li>   
+                <li><a class="nav-menu" href="" target="_blank">Portfolio</a></li>
+                <li><a class="nav-menu" href="" target="_blank">Contacts</a></li>   
             </ul>
         </nav>
         <address>
@@ -30,96 +30,96 @@
     </header>
 
     <main>
-        <section>
+        <section class="section-main">
             <!-- <div> -->
-                <h1>Effective Solutions for Your Business</h1>
+                <h1 class="title-main">Effective Solutions for Your Business</h1>
             <!-- </div> -->
             <!-- <div> -->
                 <button class="button" type="button">Order Service</button>
             <!-- </div> -->
         </section>
         <section>
-            <h2>H2</h2>
+            <h2 class="title-subtitle">H2</h2>
             <!-- <div> -->
                 <ul>
                     <li>
-                        <h3>Strategy</h3>
-                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                        <h3 class="title">Strategy</h3>
+                        <p class="main-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li>
-                        <h3>Punctuality</h3>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        <h3 class="title">Punctuality</h3>
+                        <p class="main-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li>
-                        <h3>Diligence</h3>
-                        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        <h3 class="title">Diligence</h3>
+                        <p class="main-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li>
-                        <h3>Technologies</h3>
-                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        <h3 class="title">Technologies</h3>
+                        <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
                 </ul>
             <!-- </div> -->
         </section>
-        <section class="section3">
+        <section class="section-our_team">
             <!-- <div> -->
-                <h2>Our Team</h2>
+                <h2 class="title-subtitle">Our Team</h2>
             <!-- </div> -->
             <ul>
                 <li>
-                    <img src="./images/photo1.jpg" alt="Mark Guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <img class="image" src="./images/photo1.jpg" alt="Mark Guerrero" width="264">
+                    <h3 class="title">Mark Guerrero</h3>
+                    <p class="main-text">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/photo2.jpg" alt="Tom Ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <img class="image" src="./images/photo2.jpg" alt="Tom Ford" width="264">
+                    <h3 class="title">Tom Ford</h3>
+                    <p class="main-text">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/photo3.jpg" alt="Camila Garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <img class="image" src="./images/photo3.jpg" alt="Camila Garcia" width="264">
+                    <h3 class="title">Camila Garcia</h3>
+                    <p class="main-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/photo4.jpg" alt="Daniel Wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <img class="image" src="./images/photo4.jpg" alt="Daniel Wilson" width="264">
+                    <h3 class="title">Daniel Wilson</h3>
+                    <p class="main-text">UI Designer</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Portfolio</h2>
+            <h2 class="title-subtitle">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images/pf1.jpg" alt="Banking App" width="360">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <img class="image" src="./images/pf1.jpg" alt="Banking App" width="360">
+                    <h3 class="title">Banking App</h3>
+                    <p class="main-text">App</p>
                 </li>
                 <li>
-                    <img src="./images/pf2.jpg" alt="Cashless Payment" width="360">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <img class="image" src="./images/pf2.jpg" alt="Cashless Payment" width="360">
+                    <h3 class="title">Cashless Payment</h3>
+                    <p class="main-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/pf3.jpg" alt="Meditation App" width="360">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <img class="image" src="./images/pf3.jpg" alt="Meditation App" width="360">
+                    <h3 class="title">Meditation App</h3>
+                    <p class="main-text">App</p>
                 </li>
                 <li>
-                    <img src="./images/pf4.jpg" alt="Taxi Service" width="360">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <img class="image" src="./images/pf4.jpg" alt="Taxi Service" width="360">
+                    <h3 class="title">Taxi Service</h3>
+                    <p class="main-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/pf5.jpg" alt="Screen Illustrations" width="360">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <img class="image" src="./images/pf5.jpg" alt="Screen Illustrations" width="360">
+                    <h3 class="title">Screen Illustrations</h3>
+                    <p class="main-text">Design</p>
                 </li>
                 <li>
-                    <img src="./images/pf6.jpg" alt="Online Courses" width="360">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <img class="image" src="./images/pf6.jpg" alt="Online Courses" width="360">
+                    <h3 class="title">Online Courses</h3>
+                    <p class="main-text">Marketing</p>
                 </li>
             </ul>
         </section>
@@ -127,9 +127,9 @@
 
     <footer class="footer">
         <!-- <div> -->
-            <a class="logo-footer" href="./index.html"><span class="logo-half1">Web</span>Studio</a>
+            <a class="logo-footer" href="./index.html">Web<span class="logo-halftoot">Studio</span></a>
         <!-- </div> -->
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
 </body>
