UPdate css & coments

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <ul>
                 <li><a class="nav-menu" href="./index.html" target="_blank">Studio</a></li>
                 <li><a class="nav-menu" href="" target="_blank">Portfolio</a></li>
-                <li><a class="nav-menu" href="" target="_blank">Contacts</a></li>   
+                <li><a class="nav-menu" href="" target="_blank">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="address_data">
             <ul>
                 <li><a class="nav-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="nav-address" href="tel:+110001111111">+11 (000) 111-11-11</a></li> 
