--- a/index.html
+++ b/index.html
@@ -66,23 +66,23 @@
                 <h2 class="title-subtitle">Our Team</h2>
             <!-- </div> -->
             <ul>
-                <li>
-                    <img class="image" src="./images/photo1.jpg" alt="Mark Guerrero" width="264">
+                <li class="image">
+                    <img src="./images/photo1.jpg" alt="Mark Guerrero" width="264">
                     <h3 class="title">Mark Guerrero</h3>
                     <p class="main-text">Product Designer</p>
                 </li>
-                <li>
-                    <img class="image" src="./images/photo2.jpg" alt="Tom Ford" width="264">
+                <li class="image">
+                    <img src="./images/photo2.jpg" alt="Tom Ford" width="264">
                     <h3 class="title">Tom Ford</h3>
                     <p class="main-text">Frontend Developer</p>
                 </li>
-                <li>
-                    <img class="image" src="./images/photo3.jpg" alt="Camila Garcia" width="264">
+                <li class="image">
+                    <img src="./images/photo3.jpg" alt="Camila Garcia" width="264">
                     <h3 class="title">Camila Garcia</h3>
                     <p class="main-text">Marketing</p>
                 </li>
-                <li>
-                    <img class="image" src="./images/photo4.jpg" alt="Daniel Wilson" width="264">
+                <li class="image">
+                    <img src="./images/photo4.jpg" alt="Daniel Wilson" width="264">
                     <h3 class="title">Daniel Wilson</h3>
                     <p class="main-text">UI Designer</p>
                 </li>
