--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <footer class="footer">
         <!-- <div> -->
-            <a class="logo-footer" href="./index.html">Web<span class="logo-halftoot">Studio</span></a>
+            <a class="logo" href="./index.html">Web<span class="logo-halftoot">Studio</span></a>
         <!-- </div> -->
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
